# LeadGen-v4

./: .env.example  .gitignore  LeadGen_context.md  Makefile  README.md  config.json  main.py  pyproject.toml
config/: constants.py  settings.py
core/: exceptions.py  logging.py
data/: cities_config.json  database.db
database/: __init__.py
gui/: __init__.py  analytics_widget.py  bitrix_analytics_widget.py  cities_manager_widget.py  file_loader.py  history_widget.py  main_window.py  preview_table.py  progress_bar.py  settings_widget.py  styles.py  url_generator_widget.py
htmlcov/: class_index.html  function_index.html  index.html  main_py.html  status.json  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_constants_py.html  z_1ea838694151cac8_settings_py.html  z_35f413a6cfe5475b___init___py.html  z_35f413a6cfe5475b_file_loader_py.html  z_35f413a6cfe5475b_main_window_py.html  z_35f413a6cfe5475b_preview_table_py.html  z_35f413a6cfe5475b_progress_bar_py.html  z_35f413a6cfe5475b_styles_py.html  z_51fcec635d35c76c___init___py.html  z_51fcec635d35c76c_lead_py.html  z_57760688d1f824db___init___py.html  z_57760688d1f824db_exceptions_py.html  z_57760688d1f824db_logging_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_b2ca1f4181a5c386_test_bitrix_service_py.html  z_b2ca1f4181a5c386_test_data_service_py.html  z_b2ca1f4181a5c386_test_full_pipeline_py.html  z_b2ca1f4181a5c386_test_phone_service_py.html  z_b2ca1f4181a5c386_test_repositories_py.html  z_c810615cce0f7acb___init___py.html  z_c810615cce0f7acb_url_cleaner_py.html  (+8 more)
(+19 files in other folders)
